// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheet Rendering Only buttons 1`] = `
<View
  style={
    [
      {
        "borderTopColor": "#E6E6E6",
        "borderTopWidth": 0.3333333333333333,
        "shadowColor": "#E6E6E6",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "elevation": 6,
          "shadowColor": "#939393",
        },
        {
          "backgroundColor": "rgb(255, 255, 255)",
        },
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "margin": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
          }
        }
      />
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "marginHorizontal": -8,
            "marginTop": 0,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#0066B1",
              "borderRadius": 4,
              "flex": 1,
              "height": 32,
              "justifyContent": "center",
              "margin": 0,
              "marginHorizontal": 8,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
          testID="touchable-opacity"
        >
          <View
            style={
              {
                "flexDirection": "row",
                "marginHorizontal": 16,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#212121",
                    "fontFamily": "Ubuntu",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "lineHeight": 20,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Action!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`BottomSheet Rendering With button 1`] = `
<View
  style={
    [
      {
        "borderTopColor": "#E6E6E6",
        "borderTopWidth": 0.3333333333333333,
        "shadowColor": "#E6E6E6",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "elevation": 6,
          "shadowColor": "#939393",
        },
        {
          "backgroundColor": "rgb(255, 255, 255)",
        },
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "margin": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#212121",
                "fontFamily": "Ubuntu",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "lineHeight": 20,
              }
            }
          >
            Title
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginTop": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#666666",
              "fontFamily": "Ubuntu",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 20,
            }
          }
        >
          Text
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "marginHorizontal": -8,
            "marginTop": 16,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#0066B1",
              "borderRadius": 4,
              "flex": 1,
              "height": 32,
              "justifyContent": "center",
              "margin": 0,
              "marginHorizontal": 8,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
          testID="touchable-opacity"
        >
          <View
            style={
              {
                "flexDirection": "row",
                "marginHorizontal": 16,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#212121",
                    "fontFamily": "Ubuntu",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "lineHeight": 20,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Action!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`BottomSheet Rendering With children 1`] = `
<View
  style={
    [
      {
        "borderTopColor": "#E6E6E6",
        "borderTopWidth": 0.3333333333333333,
        "shadowColor": "#E6E6E6",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "elevation": 6,
          "shadowColor": "#939393",
        },
        {
          "backgroundColor": "rgb(255, 255, 255)",
        },
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "margin": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
          }
        }
      />
      <Text>
        Hello world!
      </Text>
    </View>
  </View>
</View>
`;

exports[`BottomSheet Rendering Without icon 1`] = `
<View
  style={
    [
      {
        "borderTopColor": "#E6E6E6",
        "borderTopWidth": 0.3333333333333333,
        "shadowColor": "#E6E6E6",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "elevation": 6,
          "shadowColor": "#939393",
        },
        {
          "backgroundColor": "rgb(255, 255, 255)",
        },
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "margin": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#212121",
                "fontFamily": "Ubuntu",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "lineHeight": 20,
              }
            }
          >
            Title
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginTop": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#666666",
              "fontFamily": "Ubuntu",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 20,
            }
          }
        >
          Text
        </Text>
      </View>
    </View>
  </View>
</View>
`;
